--- a/modules/quickstart/pages/quickstart-install-suma-proxy.adoc
+++ b/modules/quickstart/pages/quickstart-install-suma-proxy.adoc
@@ -33,8 +33,7 @@ image::unifiedinstaller-proxy.png[scaledwidth=80%]
 . In the [guimenu]``Registration`` screen, check the [guimenu]``Register System via scc.suse.com`` checkbox, enter your {scc} credentii
 als, and click btn:[Next].
 . In the [guimenu]``Available Extensions and Modules`` screen, select any extensions or modules you require, and click btn:[Next].
-    [systemitem]``Basesystem``, [systemitem]``SUSE Manager Proxy``, and [systemitem]``Server Applications`` are pre-selected and mandaa
-tory for the {productname} Proxy installation.
+    [systemitem]``Basesystem``, [systemitem]``SUSE Manager Proxy``, and [systemitem]``Server Applications`` are pre-selected and mandatory for the {productname} Proxy installation.
     OPTIONAL: In the following [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next].
 . In the [guimenu]``System Role`` screen, check the [guimenu]``SUSE Manager Proxy`` checkbox, and click btn:[Next].
 . In the [guimenu]``Suggested Partitioning`` screen, accept the default values, or use the btn:[Guided Setup] or btn:[Expert Practitioo
