--- a/modules/specialized-guides/pages/specialized-guides-overview.adoc
+++ b/modules/specialized-guides/pages/specialized-guides-overview.adoc
@@ -7,7 +7,7 @@ This book contains a list of special topics and functionalities of {productname}
 
 It is designed to introduce basic, routine or some advanced tasks, by explaining what you are achieving in each step, and the various options available to you along the way.
 
-You can read specialirzed guides for:
+You can read specialized guides for:
 
 * xref:salt-overview.adoc[Salt Guide]
 * xref:large-deployments-overview.adoc[Large Deployments Guide]
