comment misleading xref

--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -14,7 +14,7 @@ This section gives more detail on how to create, administer, and delete custom c
 
 == Creating Custom Channels and Repositories
 
-If you have custom software packages that you need to install on your {productname} systems, you can create a custom child channel to manage them.
+If you have custom software packages that you need to install on your client systems, you can create a custom child channel to manage them.
 You need to create the channel in the {productname} {webui} and create a repository for the packages, before assigning the channel to your systems.
 
 You can select a vendor channel as the base channel if you want to use packages provided by a vendor.
@@ -25,7 +25,8 @@ Many third party vendors secure packages with GPG.
 If you want to use GPG-protected packages in your custom channel, you need to trust the GPG key which has been used to sign the metadata.
 You can then check the [guimenu]``Has Signed Metadata?`` check box to match the package metadata against the trusted GPG keys.
 // We need to create a section on importing GPG keys and change this to point there: https://github.com/SUSE/spacewalk/issues/9474 LKB 2019-09-18
-For more information on importing GPG keys, see xref:reference:systems/autoinst-gpg-and-ssl-keys.adoc[].
+// This xref is misleading:
+// For more information on importing GPG keys, see xref:reference:systems/autoinst-gpg-and-ssl-keys.adoc[].
 
 
 
