--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -56,16 +56,24 @@ Download All PDFs icon:caret-right[] icon:file-archive[link="../susemanager-docs
 |===
 | View HTML | View PDF | View HTML | View PDF
 
+//| xref:installation:install-overview.adoc[Installation Guide]  | icon:file-pdf[link="../pdf/suse_manager_installation_guide.pdf", window="_blank" role="green"]
+//| xref:client-configuration:client-config-overview.adoc[Client Configuration Guide] | icon:file-pdf[link="../pdf/suse_manager_client-configuration_guide.pdf", window="_blank" role="green"]
+//| xref:upgrade:upgrade-overview.adoc[Upgrade Guide] | icon:file-pdf[link="../pdf/suse_manager_upgrade_guide.pdf", window="_blank" role="green"]
+//| xref:reference:reference-overview.adoc[Reference Guide]  | icon:file-pdf[link="../pdf/suse_manager_reference_guide.pdf", window="_blank" role="green"]
+//| xref:administration:admin-overview.adoc[Administration Guide] | icon:file-pdf[link="../pdf/suse_manager_administration_guide.pdf", window="_blank" role="green"]
+//| xref:salt:salt-overview.adoc[Salt Guide]  | icon:file-pdf[link="../pdf/suse_manager_salt_guide.pdf", window="_blank" role="green"]
+//| xref:retail:retail-overview.adoc[Retail Guide]  | icon:file-pdf[link="../pdf/suse_manager_retail_guide.pdf", window="_blank" role="green"]
+//| xref:large-deployments:large-deployments-overview.adoc[Large Deployments Guide]  | icon:file-pdf[link="../pdf/suse_manager_large-deployments_guide.pdf", window="_blank" role="green"]
+//| xref:quickstart-public-cloud:qs-publiccloud-overview.adoc[Quick Start - Public Cloud]  | icon:file-pdf[link="../pdf/suse_manager_quickstart-public-cloud_guide.pdf", window="_blank" role="green"]
+//| xref:quickstart-sap:qs-sap-overview.adoc[Quick Start - SAP]  | icon:file-pdf[link="../pdf/suse_manager_quickstart-sap_guide.pdf", window="_blank" role="green"]
+| xref:quickstart:quickstart-overview.adoc[Quick Start]  | icon:file-pdf[link="../pdf/uyuni_quickstart.pdf", window="_blank" role="green"]
 | xref:installation:install-overview.adoc[Installation Guide]  | icon:file-pdf[link="../pdf/suse_manager_installation_guide.pdf", window="_blank" role="green"]
 | xref:client-configuration:client-config-overview.adoc[Client Configuration Guide] | icon:file-pdf[link="../pdf/suse_manager_client-configuration_guide.pdf", window="_blank" role="green"]
 | xref:upgrade:upgrade-overview.adoc[Upgrade Guide] | icon:file-pdf[link="../pdf/suse_manager_upgrade_guide.pdf", window="_blank" role="green"]
-| xref:reference:reference-overview.adoc[Reference Guide]  | icon:file-pdf[link="../pdf/suse_manager_reference_guide.pdf", window="_blank" role="green"]
 | xref:administration:admin-overview.adoc[Administration Guide] | icon:file-pdf[link="../pdf/suse_manager_administration_guide.pdf", window="_blank" role="green"]
-| xref:salt:salt-overview.adoc[Salt Guide]  | icon:file-pdf[link="../pdf/suse_manager_salt_guide.pdf", window="_blank" role="green"]
 | xref:retail:retail-overview.adoc[Retail Guide]  | icon:file-pdf[link="../pdf/suse_manager_retail_guide.pdf", window="_blank" role="green"]
-| xref:large-deployments:large-deployments-overview.adoc[Large Deployments Guide]  | icon:file-pdf[link="../pdf/suse_manager_large-deployments_guide.pdf", window="_blank" role="green"]
-| xref:quickstart-public-cloud:qs-publiccloud-overview.adoc[Quick Start - Public Cloud]  | icon:file-pdf[link="../pdf/suse_manager_quickstart-public-cloud_guide.pdf", window="_blank" role="green"]
-| xref:quickstart-sap:qs-sap-overview.adoc[Quick Start - SAP]  | icon:file-pdf[link="../pdf/suse_manager_quickstart-sap_guide.pdf", window="_blank" role="green"]
+| xref:reference:reference-overview.adoc[Reference Guide]  | icon:file-pdf[link="../pdf/suse_manager_reference_guide.pdf", window="_blank" role="green"]
+| xref:specialized-guides:specialized-guides-overview.adoc[Specialized Guides]  | icon:file-pdf[link="../pdf/uyuni_specialized-guides.pdf", window="_blank" role="green"]
 
 
 //| Architecture               | xref:architecture:architecture-intro.adoc[HTML] link:../pdf/suse_manager_architecture.pdf[PDF]
@@ -86,16 +94,24 @@ Download All PDFs icon:caret-right[] icon:file-archive[link="../uyuni-docs_en-pd
 |===
 | View HTML | View PDF | View HTML | View PDF
 
-| xref:installation:install-overview.adoc[Installation Guide]                          | icon:file-pdf[link="../pdf/uyuni_installation_guide.pdf", window="_blank" role="green"]
-| xref:client-configuration:client-config-overview.adoc[Client Configuration Guide] | icon:file-pdf[link="../pdf/uyuni_client-configuration_guide.pdf", window="_blank" role="green"]
-| xref:upgrade:upgrade-overview.adoc[Upgrade Guide]                                 | icon:file-pdf[link="../pdf/uyuni_upgrade_guide.pdf", window="_blank" role="green"]
-| xref:reference:reference-overview.adoc[Reference Guide]                                        | icon:file-pdf[link="../pdf/uyuni_reference_guide.pdf", window="_blank" role="green"]
-| xref:administration:admin-overview.adoc[Administration Guide]                               | icon:file-pdf[link="../pdf/uyuni_administration_guide.pdf", window="_blank" role="green"]
-| xref:salt:salt-overview.adoc[Salt Guide]                                             | icon:file-pdf[link="../pdf/uyuni_salt_guide.pdf", window="_blank" role="green"]
-| xref:retail:retail-overview.adoc[Retail Guide]                                | icon:file-pdf[link="../pdf/uyuni_retail_guide.pdf", window="_blank" role="green"]
-| xref:large-deployments:large-deployments-overview.adoc[Large Deployments Guide]  | icon:file-pdf[link="../pdf/uyuni_large-deployments_guide.pdf", window="_blank" role="green"]
-| xref:quickstart-public-cloud:qs-publiccloud-overview.adoc[Quick Start Guide - Public Cloud]  | icon:file-pdf[link="../pdf/uyuni_quickstart-public-cloud_guide.pdf", window="_blank" role="green"]
-| xref:quickstart-sap:qs-sap-overview.adoc[Quick Start - SAP]  | icon:file-pdf[link="../pdf/suse_manager_quickstart-sap_guide.pdf", window="_blank" role="green"]
+//| xref:installation:install-overview.adoc[Installation Guide]                          | icon:file-pdf[link="../pdf/uyuni_installation_guide.pdf", window="_blank" role="green"]
+//| xref:client-configuration:client-config-overview.adoc[Client Configuration Guide] | icon:file-pdf[link="../pdf/uyuni_client-configuration_guide.pdf", window="_blank" role="green"]
+//| xref:upgrade:upgrade-overview.adoc[Upgrade Guide]                                 | icon:file-pdf[link="../pdf/uyuni_upgrade_guide.pdf", window="_blank" role="green"]
+//| xref:reference:reference-overview.adoc[Reference Guide]                                        | icon:file-pdf[link="../pdf/uyuni_reference_guide.pdf", window="_blank" role="green"]
+//| xref:administration:admin-overview.adoc[Administration Guide]                               | icon:file-pdf[link="../pdf/uyuni_administration_guide.pdf", window="_blank" role="green"]
+//| xref:salt:salt-overview.adoc[Salt Guide]                                             | icon:file-pdf[link="../pdf/uyuni_salt_guide.pdf", window="_blank" role="green"]
+//| xref:retail:retail-overview.adoc[Retail Guide]                                | icon:file-pdf[link="../pdf/uyuni_retail_guide.pdf", window="_blank" role="green"]
+//| xref:large-deployments:large-deployments-overview.adoc[Large Deployments Guide]  | icon:file-pdf[link="../pdf/uyuni_large-deployments_guide.pdf", window="_blank" role="green"]
+//| xref:quickstart-public-cloud:qs-publiccloud-overview.adoc[Quick Start Guide - Public Cloud]  | icon:file-pdf[link="../pdf/uyuni_quickstart-public-cloud_guide.pdf", window="_blank" role="green"]
+//| xref:quickstart-sap:qs-sap-overview.adoc[Quick Start - SAP]  | icon:file-pdf[link="../pdf/suse_manager_quickstart-sap_guide.pdf", window="_blank" role="green"]
+| xref:quickstart:quickstart-overview.adoc[Quick Start]  | icon:file-pdf[link="../pdf/uyuni_quickstart.pdf", window="_blank" role="green"]
+| xref:installation:install-overview.adoc[Installation Guide]  | icon:file-pdf[link="../pdf/suse_manager_installation_guide.pdf", window="_blank" role="green"]
+| xref:client-configuration:client-config-overview.adoc[Client Configuration Guide] | icon:file-pdf[link="../pdf/suse_manager_client-configuration_guide.pdf", window="_blank" role="green"]
+| xref:upgrade:upgrade-overview.adoc[Upgrade Guide] | icon:file-pdf[link="../pdf/suse_manager_upgrade_guide.pdf", window="_blank" role="green"]
+| xref:administration:admin-overview.adoc[Administration Guide] | icon:file-pdf[link="../pdf/suse_manager_administration_guide.pdf", window="_blank" role="green"]
+| xref:retail:retail-overview.adoc[Retail Guide]  | icon:file-pdf[link="../pdf/suse_manager_retail_guide.pdf", window="_blank" role="green"]
+| xref:reference:reference-overview.adoc[Reference Guide]  | icon:file-pdf[link="../pdf/suse_manager_reference_guide.pdf", window="_blank" role="green"]
+| xref:specialized-guides:specialized-guides-overview.adoc[Specialized Guides]  | icon:file-pdf[link="../pdf/uyuni_specialized-guides.pdf", window="_blank" role="green"]
 
 
 //| Architecture               | xref:architecture:architecture-intro.adoc[HTML] link:../pdf/suse_manager_architecture.pdf[PDF]
