--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -44,7 +44,7 @@ endif::[]
 ifeval::[{suma-content} == true]
 *** xref:install-ibmz.adoc[Install on IBM Z]
 endif::[]
-** xref:setup-intro.adoc[Setting Up]
+** xref:setup-intro.adoc[Setup]
 ifeval::[{suma-content} == true]
 *** xref:server-setup.adoc[Server Setup]
 endif::[]
