--- a/modules/installation-and-upgrade/pages/setup-intro.adoc
+++ b/modules/installation-and-upgrade/pages/setup-intro.adoc
@@ -1,4 +1,4 @@
 [[setup-intro]]
-= Setting Up
+= Setup
 
 This section describes the initial steps you need to take after installation to make your {productname} environment ready to use.
