--- a/modules/retail/pages/retail-terminal-names.adoc
+++ b/modules/retail/pages/retail-terminal-names.adoc
@@ -1,4 +1,4 @@
-[[retail.sect.admin.terminal_naming]]
+[[retail-terminal-names]]
 == Terminal Names
 
 Terminals can be named according to certain parameters, which can make it easier to match the physical device with its record in the {productname} {webui}.
