--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -16,58 +16,58 @@ endif::[]
 *** xref:salt-terminology.adoc[Terminology]
 *** xref:salt-command.adoc[The Salt Command]
 *** xref:salt-useful-commands.adoc[Common Salt Commands]
-*** xref:salt-states.adoc[Salt States and Pillars]
-*** xref:custom-states.adoc[Custom Salt States]
+*** xref:salt-states-and-pillars.adoc[Salt States and Pillars]
+*** xref:salt-custom-states.adoc[Custom Salt States]
 *** xref:salt-file-locations.adoc[File Locations]
 *** xref:salt-gitfs.adoc[GitFS Fileserver Backend]
-*** xref:yomi.adoc[Install Using Yomi]
-*** xref:config-modules.adoc[Configuration Modules]
+*** xref:salt-yomi.adoc[Install Using Yomi]
+*** xref:salt-config-modules.adoc[Configuration Modules]
 // Formulas
-*** xref:formulas-intro.adoc[Salt Formulas]
-**** xref:formulas-suma.adoc[Formulas provided by {productname}]
-**** xref:formula-bind.adoc[Bind Formula]
-**** xref:formula-branchnetwork.adoc[Branch Network Formula]
-**** xref:formula-dhcpd.adoc[DHCPd Formula]
-**** xref:formula-imagesync.adoc[Image Sync Formula]
-**** xref:formula-monitoring.adoc[Monitoring Formulas]
-**** xref:formula-pxe.adoc[PXE Formula]
-**** xref:formula-saltboot.adoc[Saltboot Formula]
-**** xref:formula-tftpd.adoc[TFTPd Formula]
-**** xref:formula-vsftpd.adoc[VsFTPd Formula]
-**** xref:formula-yomi.adoc[Yomi Formula]
-**** xref:formulas-custom.adoc[Custom Formulas]
+*** xref:salt-formulas-intro.adoc[Salt Formulas]
+**** xref:salt-formulas-by-product.adoc[Formulas provided by {productname}]
+**** xref:salt-formula-bind.adoc[Bind Formula]
+**** xref:salt-formula-branchnetwork.adoc[Branch Network Formula]
+**** xref:salt-formula-dhcpd.adoc[DHCPd Formula]
+**** xref:salt-formula-imagesync.adoc[Image Sync Formula]
+**** xref:salt-formula-monitoring.adoc[Monitoring Formulas]
+**** xref:salt-formula-pxe.adoc[PXE Formula]
+**** xref:salt-formula-saltboot.adoc[Saltboot Formula]
+**** xref:salt-formula-tftpd.adoc[TFTPd Formula]
+**** xref:salt-formula-vsftpd.adoc[VsFTPd Formula]
+**** xref:salt-formula-yomi.adoc[Yomi Formula]
+**** xref:salt-formulas-custom.adoc[Custom Formulas]
 //*** xref:salt-example-formula.adoc[Example Custom Formula]
 *** xref:salt-ssh.adoc[Salt SSH]
 *** xref:salt-rate-limiting.adoc[Rate Limiting]
-*** xref:large-scale.adoc[Scaling Salt Minions]
+*** xref:salt-scaling-minions.adoc[Scaling Minions]
 // Leaving this breadcrumb here for now, but these pages will need to be removed from the Salt Guide entirely at some point. --LKB 2020-07-17
 // **** xref:large-scale-tuning.adoc[Tuning Large Scale Installations]
 // Guide 2
 // Large Deployments
 ** xref:large-deployments-overview.adoc[Large Deployments Guide]
-*** xref:hardware-reqs.adoc[Hardware Requirements]
-*** xref:single-server.adoc[Single Server]
-**** xref:operation-reqs.adoc[Operation Requirements]
-*** xref:multi-server.adoc[Multiple Servers with Hub]
-**** xref:hub-reqs.adoc[Hub Operation Requirements]
-**** xref:hub-install.adoc[Hub Installation]
-**** xref:hub-api.adoc[Hub API]
-**** xref:hub-namespaces.adoc[Hub Namespaces]
-**** xref:hub-auth.adoc[Hub Authentication]
-*** xref:retail-large-scale.adoc[Large Retail Environments]
-*** xref:tuning.adoc[Tuning Large Installations]
-// ** xref:monitoring.adoc[Monitoring Large Installation]
+*** xref:large-deployments-hardware-reqs.adoc[Hardware Requirements]
+*** xref:large-deployments-single-server.adoc[Single Server]
+**** xref:large-deployments-operation-reqs.adoc[Operation Requirements]
+*** xref:large-deployments-multi-server.adoc[Multiple Servers with Hub]
+**** xref:large-deployments-hub-reqs.adoc[Hub Operation Requirements]
+**** xref:large-deployments-hub-install.adoc[Hub Installation]
+**** xref:large-deployments-hub-api.adoc[Hub API]
+**** xref:large-deployments-hub-namespaces.adoc[Hub Namespaces]
+**** xref:large-deployments-hub-auth.adoc[Hub Authentication]
+*** xref:large-deployments-retail-large-scale.adoc[Large Retail Environments]
+*** xref:large-deployments-tuning.adoc[Tuning Large Installations]
+// ** xref:large-deployments-monitoring.adoc[Monitoring Large Installation]
 // Guide 3
 // Public Cloud
 ** xref:qs-publiccloud-overview.adoc[Quick Start: Public Cloud]
-*** xref:setup.adoc[Setting Up]
-*** xref:clients.adoc[Clients]
+*** xref:qs-publiccloud-setup.adoc[Setting Up]
+*** xref:qs-publiccloud-clients.adoc[Clients]
 // Guide 4
 // SAP
 ** xref:qs-sap-overview.adoc[Quick Start: SAP]
-*** xref:prepare-server.adoc[Prepare Server]
-*** xref:prepare-clients.adoc[Prepare Clients]
-*** xref:configure.adoc[Configuration]
+*** xref:qs-sap-prepare-server.adoc[Prepare Server]
+*** xref:qs-sap-prepare-clients.adoc[Prepare Clients]
+*** xref:qs-sap-configure.adoc[Configuration]
 
 
 // License
