File reference fix.

--- a/modules/specialized-guides/pages/large-deployments-operation-reqs.adoc
+++ b/modules/specialized-guides/pages/large-deployments-operation-reqs.adoc
@@ -108,7 +108,7 @@ Swap space use can have significant impacts on performance.
 If significant non-transient swap usage is detected, you can increase the available hardware RAM.
 
 You can also consider tuning the Server to consume less memory.
-For more information on tuning, see xref:salt:large-scale-tuning.adoc[].
+For more information on tuning, see xref:specialized-guides:salt-scaling-minions.adoc[].
 
 
 
