--- a/modules/specialized-guides/pages/salt-terminology.adoc
+++ b/modules/specialized-guides/pages/salt-terminology.adoc
@@ -29,7 +29,7 @@ Formulas are collections of Salt States that contain generic parameter fields.
 Formulas are used within {productname} to assist with configuring Salt clients.
 Some formulas have extensive configuration options, and use forms to help organize them in the {productname} {webui}.
 +
-For more information about formulas, see xref:specialized-guides:formulas-intro.adoc[].
+For more information about formulas, see xref:specialized-guides:salt-formulas-intro.adoc[].
 
 Grains::
 Grains provide information about the hardware of a client.
