--- a/modules/specialized-guides/pages/salt-yomi.adoc
+++ b/modules/specialized-guides/pages/salt-yomi.adoc
@@ -65,7 +65,7 @@ systemctl restart salt-master.service
 ----
 
 
-For more information about the Yomi formula, see xref:specialized-guides:salt-formula-yomi.adoc[]
+For more information about the Yomi formula, see xref:specialized-guides:salt-formula-yomi.adoc[].
 
 
 
