Fixed title formatting for some pages.

--- a/modules/retail/nav-retail-guide.adoc
+++ b/modules/retail/nav-retail-guide.adoc
@@ -35,7 +35,7 @@ endif::[]
 *** xref:retail-offline.adoc[Offline Use]
 *** xref:retail-terminal-ratelimiting.adoc[Rate Limiting Terminals]
 // Formulas
-** xref:retail-formulas-intro.adoc[Formulas]
+** xref:retail-formulas-intro.adoc[Retail Formulas]
 // Admin
 ** xref:retail-admin.adoc[Administration]
 *** xref:retail-mass-config.adoc[Mass Configuration]
