--- a/modules/retail/pages/retail-mass-config-yaml.adoc
+++ b/modules/retail/pages/retail-mass-config-yaml.adoc
@@ -1,5 +1,5 @@
 [[retail.mass.config.example.yaml]]
-== Example YAML File for Mass Configuration
+= Example YAML File for Mass Configuration
 
 You can use the [command]``retail_yaml`` command to import configuration parameters from a manually prepared YAML file.
 This section contains a YAML example file with comments.
