--- a/modules/retail/pages/retail-terminal-ratelimiting.adoc
+++ b/modules/retail/pages/retail-terminal-ratelimiting.adoc
@@ -1,5 +1,5 @@
 [[retail.terminal-ratelimiting]]
-== Rate Limiting Terminals
+= Rate Limiting Terminals
 
 Salt is able to run commands in parallel on a large number of terminals.
 This can potentially create heavy load on your infrastructure.
