--- a/modules/retail/pages/retail-saltboot-diagram.adoc
+++ b/modules/retail/pages/retail-saltboot-diagram.adoc
@@ -1,5 +1,5 @@
 [[retail.saltboot.diagram]]
-== Saltboot Diagram
+= Saltboot Diagram
 
 The saltboot process involves the {productname} Server, a terminal running the saltboot ``initrd``, and the branch server providing the saltboot services to the terminal.
 
