Fixed more crossreferences to remaned files.

--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -13,7 +13,7 @@ For Salt clients running {sles}{nbsp}12 or older, you also need the [package]``p
 ====
 Do not register the {productname} Server to itself.
 The {productname} Server must be managed individually or by using another separate {productname} Server.
-For more information about using multiple servers, see xref:large-deployments:multi-server.adoc[].
+For more information about using multiple servers, see xref:specialized-guides:large-deployments-multi-server.adoc[].
 ====
 
 
