--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -9,7 +9,7 @@ For all other clients and channels, you need to manually trust third party GPG k
 [NOTE]
 ====
 If you are bootstrapping Salt clients from the {productname} {webui}, you can use a Salt state to trust the key.
-For more information on custom Salt states, see xref:salt:custom-states.adoc[].
+For more information on custom Salt states, see xref:specialized-guides:salt-custom-states.adoc[].
 ====
 
 
