--- a/modules/reference/pages/configuration/config-channels.adoc
+++ b/modules/reference/pages/configuration/config-channels.adoc
@@ -9,7 +9,7 @@ Local configuration management allows you to specify overrides, and select confi
 
 For Salt clients, use state channels.
 When you create a state channel, you can create or upload custom Salt states.
-For more information about custom Salt states, see xref:salt:custom-states.adoc[].
+For more information about custom Salt states, see xref:specialized-guides:salt-custom-states.adoc[].
 
 Click the name of the configuration channel to see the details page for that channel.
 If you click the number of files in the channel, you are taken to the [guimenu]``List/Remove Files`` page of that channel.
