--- a/modules/retail/pages/retail-deploy-terminals-other.adoc
+++ b/modules/retail/pages/retail-deploy-terminals-other.adoc
@@ -52,7 +52,7 @@ dd bs=1M if=<usb image name> of=<path to usb device>
 
 When you have the image on the USB drive, check that the terminals you want to deploy allow local booting.
 You can check this by editing the Saltboot formula in the {productname} {smr} {webui}.
-For more information about the Saltboot formula, see xref:salt:formula-saltboot.adoc[].
+For more information about the Saltboot formula, see xref:specialized-guides:salt-formula-saltboot.adoc[].
 
 
 
@@ -123,7 +123,7 @@ echo ./etc/sysconfig/network/ifcfg-wlan0 | cpio -H newc -o | gzip >> /srv/saltbo
 ----
 . Check that the terminals you want to deploy allow local booting.
   You can check this by editing the Saltboot formula in the {productname} {smr} {webui}.
-  For more information about the Saltboot formula, see xref:salt:formula-saltboot.adoc[].
+  For more information about the Saltboot formula, see xref:specialized-guides:salt-formula-saltboot.adoc[].
 
 
 
