Fixed links to files.

--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -32,8 +32,8 @@ After you have completed the initial setup, you can replace the default certific
 
 .Procedure: Import Certificates on a New {productname} Server
 
-. Install the {productname} Server according to the instructions in xref:installation:install-intro.adoc[].
-. Complete the initial setup according to xref:installation:server-setup.adoc[].
+. Install the {productname} Server according to the instructions in xref:installation-and-upgrade:install-intro.adoc[].
+. Complete the initial setup according to xref:installation-and-upgrade:server-setup.adoc[].
 . At the command prompt, point the SSL environment variables to the certificate file locations:
 +
 ----
@@ -67,8 +67,8 @@ After you have completed the initial setup, you can replace the default certific
 
 .Procedure: Import Certificates on a New {productname} Proxy
 
-. Install the {productname} Proxy according to the instructions in xref:installation:install-intro.adoc[].
-. Complete the initial setup according to xref:installation:proxy-setup.adoc[].
+. Install the {productname} Proxy according to the instructions in xref:installation-and-upgrade:install-intro.adoc[].
+. Complete the initial setup according to xref:installation-and-upgrade:proxy-setup.adoc[].
 . At the command prompt, run:
 +
 ----
