--- a/modules/administration/pages/tshoot-hostname-rename.adoc
+++ b/modules/administration/pages/tshoot-hostname-rename.adoc
@@ -70,4 +70,4 @@ With a re-activation key you can re-register traditional clients (if there are a
 For more information, see xref:client-configuration:registration-cli.adoc[].
 . OPTIONAL: If you use PXE boot through a proxy, you must check the configuration settings of the proxy.
     On the proxy, run the [command]``configure-tftpsync.sh`` setup script and enter the requested information.
-    For more information, see xref:installation:proxy-setup.adoc[].
+    For more information, see xref:installation-and-upgrade:proxy-setup.adoc[].
