--- a/modules/administration/pages/tshoot-inactiveclients.adoc
+++ b/modules/administration/pages/tshoot-inactiveclients.adoc
@@ -38,6 +38,6 @@ Clients can become inactive for a number of reasons:
 
 For more information about client connections to the server, see xref:client-configuration:contact-methods-intro.adoc[].
 
-For more information about configuring ports, see xref:installation:ports.adoc[].
+For more information about configuring ports, see xref:installation-and-upgrade:ports.adoc[].
 
 For more information about troubleshooting firewalls, see xref:administration:tshoot-firewalls.adoc[].
