--- a/modules/client-configuration/pages/client-upgrades-uyuni.adoc
+++ b/modules/client-configuration/pages/client-upgrades-uyuni.adoc
@@ -14,7 +14,7 @@ opensuse_leap15_2-uyuni-client
 
 . Fully synchronize all channels with [command]``spacewalk-repo-sync``.
   In case of already defined repository URLs, continue with
-  xref:upgrade:proxy-uyuni.adoc#uyuni-202007-channeldupes[].
+  xref:installation-and-upgrade:proxy-uyuni.adoc#uyuni-202007-channeldupes[].
 +
 // These are custom channels.
 // For more information, see xref:client-configuration:clients-opensuse.adoc[].
