--- a/modules/client-configuration/pages/clients-pubcloud.adoc
+++ b/modules/client-configuration/pages/clients-pubcloud.adoc
@@ -44,7 +44,7 @@ zypper rm cloud-regionsrv-client-plugin-gce regionServiceClientConfigGCE regionS
 zypper rm regionServiceClientConfigAzure regionServiceCertsAzure
 ----
 
-For instructions on registering {productname} to {scc}, see xref:installation:server-setup.adoc[].
+For instructions on registering {productname} to {scc}, see xref:installation-and-upgrade:server-setup.adoc[].
 
 
 
