--- a/modules/client-configuration/pages/contact-methods-osad.adoc
+++ b/modules/client-configuration/pages/contact-methods-osad.adoc
@@ -37,7 +37,7 @@ OSAD clients use the fully qualified domain name (FQDN) of the server to communi
 SSL is required for [systemitem]``osad`` communication.
 If SSL certificates are not available, the daemon on your client systems fails to connect.
 Make sure your firewall rules are set to allow the required ports.
-For more information, see xref:installation:ports.adoc[].
+For more information, see xref:installation-and-upgrade:ports.adoc[].
 
 
 .Procedure: Enabling OSAD
