--- a/modules/client-configuration/pages/products.adoc
+++ b/modules/client-configuration/pages/products.adoc
@@ -12,4 +12,4 @@ When you have added a product and synchronized successfully, you have access to 
 
 include::snippets/addchannels_vendor_webui.adoc[]
 
-For more information, see xref:installation:setup-wizard.adoc[].
+For more information, see xref:installation-and-upgrade:setup-wizard.adoc[].
