--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -10,7 +10,7 @@ This table outlines hardware and software requirements for the {productname} Ser
 endif::[]
 
 ifeval::[{suma-content} == true]
-For {ibmz} hardware requirements, see xref:installation:install-ibmz.adoc[].
+For {ibmz} hardware requirements, see xref:installation-and-upgrade:install-ibmz.adoc[].
 endif::[]
 
 For {productname} {smr} hardware requirements, see xref:retail:retail-requirements.adoc[].
