--- a/modules/installation-and-upgrade/pages/install-proxy-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy-uyuni.adoc
@@ -44,4 +44,4 @@ zypper in patterns-uyuni_proxy
 * For more information about the development version of {productname}, see https://www.uyuni-project.org/pages/devel-version.html.
 
 When the installation is complete, you can continue with {productname} setup.
-For more information, see xref:installation:uyuni-proxy-registration.adoc[].
+For more information, see xref:installation-and-upgrade:uyuni-proxy-registration.adoc[].
