--- a/modules/installation-and-upgrade/pages/install-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/install-uyuni.adoc
@@ -3,7 +3,7 @@
 
 {productname} Server can be installed on openSUSE.
 
-For requirements, see xref:installation:uyuni-install-requirements.adoc[].
+For requirements, see xref:installation-and-upgrade:uyuni-install-requirements.adoc[].
 
 [NOTE]
 ====
@@ -46,4 +46,4 @@ zypper in patterns-uyuni_server
 * For more information about the development version of {productname}, see https://www.uyuni-project.org/pages/devel-version.html.
 
 When the installation is complete, you can continue with {productname} setup.
-For more information, see xref:installation:uyuni-server-setup.adoc[].
+For more information, see xref:installation-and-upgrade:uyuni-server-setup.adoc[].
