--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -173,4 +173,4 @@ zypper in -t pattern suma_server
 
 . Reboot.
 
-For proceeding with {productname} setup, see xref:installation:server-setup.adoc[SUSE Manager Setup].
+For proceeding with {productname} setup, see xref:installation-and-upgrade:server-setup.adoc[SUSE Manager Setup].
