--- a/modules/installation-and-upgrade/pages/network-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/network-requirements.adoc
@@ -31,7 +31,7 @@ When you change the hostname of the server, all clients attached to the server m
 
 
 In a production environment, the {productname} Server and clients should always use a firewall.
-For a comprehensive list of the required ports, see xref:installation:ports.adoc[].
+For a comprehensive list of the required ports, see xref:installation-and-upgrade:ports.adoc[].
 
 
 For more information on disconnected setup and port configuration, see xref:administration:disconnected-setup.adoc#client-cfg-reg-with-bootstrap-disconnected[].
