--- a/modules/installation-and-upgrade/pages/proxy-registration.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-registration.adoc
@@ -3,13 +3,13 @@
 
 {productname} Proxy systems are Salt or traditional clients that are installed with the Unified Installer and registered to {productname} using bootstrap script or GUI.
 
-For more information about installing proxies, see xref:installation:install-proxy-unified.adoc[].
+For more information about installing proxies, see xref:installation-and-upgrade:install-proxy-unified.adoc[].
 
 [IMPORTANT]
 ====
 Migrating a traditional proxy to a Salt proxy is not possible.
 If you want to change a traditional proxy to a Salt proxy, you need to reinstall the proxy.
-For more information about reinstalling proxies, see xref:installation:proxy-setup.adoc[].
+For more information about reinstalling proxies, see xref:installation-and-upgrade:proxy-setup.adoc[].
 ====
 
 After the Salt client is succesfully bootstrapped, it needs to be configured as {productname} Proxy.
