--- a/modules/installation-and-upgrade/pages/proxy-x.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-x.adoc
@@ -9,4 +9,4 @@ For more information on upgrading from 3.2 to 4.1, see:
 
 link:https://documentation.suse.com/external-tree/en-us/suma/4.1/suse-manager/upgrade/proxy-intro.html[]
 
-For more information on upgrading from 4.1 to 4.2, see xref:upgrade:proxy-y-z.adoc[]
+For more information on upgrading from 4.1 to 4.2, see xref:installation-and-upgrade:proxy-y-z.adoc[]
