--- a/modules/installation-and-upgrade/pages/pubcloud-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/pubcloud-requirements.adoc
@@ -80,4 +80,4 @@ This creates an XFS partition mounted at ``/manager_storage`` and uses it as the
 /usr/bin/suma-storage <devicename>
 ----
 
-For more information about setting up storage volumes and partitions, including recommended minimum sizes, see xref:installation:hardware-requirements.adoc[].
+For more information about setting up storage volumes and partitions, including recommended minimum sizes, see xref:installation-and-upgrade:hardware-requirements.adoc[].
