--- a/modules/installation-and-upgrade/pages/server-y-yast.adoc
+++ b/modules/installation-and-upgrade/pages/server-y-yast.adoc
@@ -29,7 +29,7 @@ yast2 migration
 +
 If there are older updates available, {yast} will notify you and ask to install them first.
 You must install all package updates before performing the migration.
-For more information, see xref:upgrade:server-z.adoc[].
+For more information, see xref:installation-and-upgrade:server-z.adoc[].
 +
 {yast} will show the possible migration targets with detailed summaries.
 // I've removed the graphical option, because we tell people to use a text console. LKB 2019-08-21
