--- a/modules/installation-and-upgrade/pages/upgrade-overview.adoc
+++ b/modules/installation-and-upgrade/pages/upgrade-overview.adoc
@@ -33,17 +33,17 @@ Upgrading within the same minor version.
 This is often referred to as a maintenance update.
 For example, upgrading from 4.1.2 to 4.1.8 or from 4.2.0 to 4.2.1.
 
-If you are upgrading the {productname} Server, see xref:upgrade:server-intro.adoc[].
+If you are upgrading the {productname} Server, see xref:installation-and-upgrade:server-intro.adoc[].
 
 endif::[]
 ifeval::[{uyuni-content} == true]
 {productname} uses an [literal]``YYYY.MM`` versioning schema suitable for rolling releases.
-If you are upgrading the {productname} Server, see xref:upgrade:server-intro-uyuni.adoc[].
+If you are upgrading the {productname} Server, see xref:installation-and-upgrade:server-intro-uyuni.adoc[].
 endif::[]
 
-If you are upgrading the {productname} Proxy, see xref:upgrade:proxy-intro.adoc[].
+If you are upgrading the {productname} Proxy, see xref:installation-and-upgrade:proxy-intro.adoc[].
 
-If you are upgrading clients, see xref:upgrade:client-intro.adoc[].
+If you are upgrading clients, see xref:client-configuration:client-upgrades.adoc[].
 
 In addition to upgrading the server, you need to upgrade other underlying technologies, including the database.
-For more information about upgrading the database, see xref:upgrade:db-intro.adoc[].
+For more information about upgrading the database, see xref:installation-and-upgrade:db-intro.adoc[].
