--- a/modules/reference/pages/admin/setup-wizard.adoc
+++ b/modules/reference/pages/admin/setup-wizard.adoc
@@ -14,4 +14,4 @@ It is the default page when you use the {productname} {webui} for the first time
 | Products      | View product entitlements and subscribe to product channels.
 |===
 
-For more information about the setup wizard, see xref:installation:setup-wizard.adoc[].
+For more information about the setup wizard, see xref:installation-and-upgrade:setup-wizard.adoc[].
