--- a/modules/retail/pages/retail-install-uyuni.adoc
+++ b/modules/retail/pages/retail-install-uyuni.adoc
@@ -3,7 +3,7 @@
 
 {productname} {smr} Server can be installed on openSUSE.
 
-For general requirements, see xref:installation:uyuni-install-requirements.adoc[].
+For general requirements, see xref:installation-and-upgrade:uyuni-install-requirements.adoc[].
 
 [NOTE]
 ====
@@ -51,13 +51,13 @@ zypper in patterns-uyuni_retail
 . Reboot the {productname} {smr} Server.
 
 
-Continue with the server setup as described in xref:installation:uyuni-server-setup.adoc[].
+Continue with the server setup as described in xref:installation-and-upgrade:uyuni-server-setup.adoc[].
 
 
 
 ////
 // Server setup is described in the reference linked above:
-// xref:installation:uyuni-server-setup.adoc[]
+// xref:installation-and-upgrade:uyuni-server-setup.adoc[]
 
 .Procedure: Running the Setup Script on the {productname} {smr} Server
 . On the {productname} {smr} Server, at the command prompt, as root, run the setup script:
