--- a/modules/specialized-guides/pages/qs-publiccloud-setup.adoc
+++ b/modules/specialized-guides/pages/qs-publiccloud-setup.adoc
@@ -30,10 +30,10 @@ Depending on the public cloud you are using, you can usually locate the {product
 In EC2, you need to search within the Community AMIs.
 In GCE and Azure, search the marketplace.
 
-Select a public cloud instance type that meets the hardware  and networking requirements in xref:installation:pubcloud-requirements.adoc[].
+Select a public cloud instance type that meets the hardware  and networking requirements in xref:installation-and-upgrade:pubcloud-requirements.adoc[].
 
 When you have your virtual machine ready, and the BYOS image installed, you need to set up {productname}.
 This is done in the same way as a local installation, using {yast}.
 When you have completed {productname} setup, you need to activate the public cloud module.
 You can then complete setup in the {productname} {webui}.
-For more information about setting up, see xref:installation:pubcloud-setup.adoc[].
+For more information about setting up, see xref:installation-and-upgrade:pubcloud-setup.adoc[].
