--- a/modules/specialized-guides/pages/qs-sap-prepare-clients.adoc
+++ b/modules/specialized-guides/pages/qs-sap-prepare-clients.adoc
@@ -22,7 +22,7 @@ Log in to your SCC account, or follow the prompts to create a new account.
 Click the btn:[Subscriptions] tab to see the registration code.
 When you install {sles}{nbsp}15 for SAP the Unified Installer prompts you for the code.
 
-For more information about registering {productname} with {scc}, see xref:installation:general-requirements.adoc[].
+For more information about registering {productname} with {scc}, see xref:installation-and-upgrade:general-requirements.adoc[].
 
 
 
