--- a/modules-disabled/architecture/pages/pubcloud-setup.adoc
+++ b/modules-disabled/architecture/pages/pubcloud-setup.adoc
@@ -50,7 +50,7 @@ zypper rm cloud-regionsrv-client-plugin-gce regionServiceClientConfigGCE regionS
 zypper rm regionServiceClientConfigAzure regionServiceCertsAzure
 ----
 
-For instructions on registering {productname} to {scc}, see xref:installation:server-setup.adoc[].
+For instructions on registering {productname} to {scc}, see xref:installation-and-upgrade:server-setup.adoc[].
 
 
 
