--- a/modules/administration/pages/infra-maintenance.adoc
+++ b/modules/administration/pages/infra-maintenance.adoc
@@ -20,7 +20,7 @@ This section contains a checklist for your downtime period, with links to furthe
 // You need to stop the spacewalk, SAP, and database services, along with any others you have running.
 // . Check if the configuration is still correct.
 . Apply the latest updates.
-    See xref:upgrade:server-intro.adoc[].
+    See xref:installation-and-upgrade:server-intro.adoc[].
 . Upgrade to the latest service pack, if required.
 // We reboot during the above listed procedures.
 // . Reboot the server.
@@ -28,7 +28,7 @@ This section contains a checklist for your downtime period, with links to furthe
 // . Start any stopped services.
 . Run [command]``spacewalk-service status`` and check whether all required services are up and running.
 
-For information about database schema upgrades and PostgreSQL migrations, see xref:upgrade:db-intro.adoc[].
+For information about database schema upgrades and PostgreSQL migrations, see xref:installation-and-upgrade:db-intro.adoc[].
 
 You can install updates using your package manager.
 For information on using {yast}, see https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-onlineupdate-you.html.
@@ -140,4 +140,4 @@ The only exception is for the duration of updates where it is expected that the 
 
 Especially if you are migrating from version 4.0 to 4.1, upgrade the server first, then any proxy.
 
-For more information, see xref:upgrade:proxy-intro.adoc[].
+For more information, see xref:installation-and-upgrade:proxy-intro.adoc[].
