--- a/modules/client-configuration/pages/configuration-basics.adoc
+++ b/modules/client-configuration/pages/configuration-basics.adoc
@@ -7,11 +7,11 @@ This section contains summary of the initial configuration steps that are necess
 
 
 ifeval::[{suma-content} == true]
-* For more information about installing {productname}, see xref:installation:install-server-unified.adoc[].
-* For more information about setting up {productname}, see xref:installation:server-setup.adoc[].
+* For more information about installing {productname}, see xref:installation-and-upgrade:install-server-unified.adoc[].
+* For more information about setting up {productname}, see xref:installation-and-upgrade:server-setup.adoc[].
 endif::[]
 
 ifeval::[{uyuni-content} == true]
-* For more information about installing {productname}, see xref:installation:install-uyuni.adoc[].
-* For more information about setting up {productname}, see xref:installation:uyuni-server-setup.adoc[].
+* For more information about installing {productname}, see xref:installation-and-upgrade:install-uyuni.adoc[].
+* For more information about setting up {productname}, see xref:installation-and-upgrade:uyuni-server-setup.adoc[].
 endif::[]
