--- a/modules/installation-and-upgrade/pages/db-intro.adoc
+++ b/modules/installation-and-upgrade/pages/db-intro.adoc
@@ -4,7 +4,7 @@
 To successfully perform a major {productname} update, you might need to upgrade the underlying database.
 
 //If you want to upgrade to the latest {productname} version, you must be using PostgreSQL version 10 or 12. 
-To upgrade to the latest PostgreSQL, see xref:upgrade:db-migration-xy.adoc[].
+To upgrade to the latest PostgreSQL, see xref:installation-and-upgrade:db-migration-xy.adoc[].
 
 ifeval::[{suma-content} == true]
 This table shows the PostgreSQL version required for each version of {productname} and {SLES}:
