--- a/modules/installation-and-upgrade/pages/install-pubcloud.adoc
+++ b/modules/installation-and-upgrade/pages/install-pubcloud.adoc
@@ -5,4 +5,4 @@ Public clouds provide {productname} under a Bring Your Own Subscription (BYOS) m
 That means that they pre-install {productname}, so you do not need to perform any installation steps.
 
 However, you will need to perform some additional setup steps before you can use {productname}.
-For public cloud setup instructions, see xref:installation:pubcloud-setup.adoc[].
+For public cloud setup instructions, see xref:installation-and-upgrade:pubcloud-setup.adoc[].
