--- a/modules/installation-and-upgrade/pages/install-server-unified.adoc
+++ b/modules/installation-and-upgrade/pages/install-server-unified.adoc
@@ -5,9 +5,9 @@
 This section describes how to install {susemgr} Server from the {sle} installation media.
 For this topic we assume that you already have valid organization credentials with {scc} and have obtained a registration code for your {susemgr}, for example from a "SUSE Manager Lifecycle Management+" subscription.
 
-For information on registering with {scc}, retrieving your organization credentials from {scc}, or obtaining installation media, see xref:installation:general-requirements.adoc[].
+For information on registering with {scc}, retrieving your organization credentials from {scc}, or obtaining installation media, see xref:installation-and-upgrade:general-requirements.adoc[].
 
-Before installing {susemgr}, ensure your physical or virtual machine has enough disk space and RAM by checking the requirements at xref:installation:hardware-requirements.adoc[].
+Before installing {susemgr}, ensure your physical or virtual machine has enough disk space and RAM by checking the requirements at xref:installation-and-upgrade:hardware-requirements.adoc[].
 
 [NOTE]
 ====
@@ -15,7 +15,7 @@ Before installing {susemgr}, ensure your physical or virtual machine has enough 
 * In case of installing {susemgr} in a public cloud where {susemgr} image is available, use that image. 
     For more information, see xref:quickstart-public-cloud:qs-publiccloud-overview.adoc[].
 * In case of installing {susemgr} in a public cloud where a {susemgr} image is not available, it is possible to start from a {sles}{nbsp}{sles-version}{nbsp}{sp-version} and switch the base product to {susemgr}{nbsp}{productnumber}.
-  For more information, see xref:installation:install-vm.adoc[].
+  For more information, see xref:installation-and-upgrade:install-vm.adoc[].
 ====
 
 
@@ -75,4 +75,4 @@ For {susemgr} Server, the expected modules are:
 * SUSE Manager Server Module
 
 When you have finished installing the {productname} Server, you need to set it up so it is ready to use.
-For more information, see xref:installation:server-setup.adoc[].
+For more information, see xref:installation-and-upgrade:server-setup.adoc[].
