--- a/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
+++ b/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
@@ -12,5 +12,5 @@ It is split into four sections:
 * Upgrade: Describes upgrading of the {productname} components, including the underlying database.
 
 It is possible to use a public cloud instance to install {productname}.
-For more information on using {productname} on a public cloud, see xref:quickstart-public-cloud:qs-publiccloud-overview.adoc[].
+For more information on using {productname} on a public cloud, see xref:specialized-guides:qs-publiccloud-overview.adoc[].
 For more information on upgrading clients, see xref:client-configuration:client-upgrades.adoc[].
