--- a/modules/installation-and-upgrade/pages/proxy-intro.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-intro.adoc
@@ -20,19 +20,19 @@ Major Version Upgrade (X Upgrade)::
 Upgrading to the next major version.
 For example, upgrading from 3.2 to 4.0 or to 4.1.
 This type of upgrade does not apply to 4.2.
-See xref:upgrade:proxy-x.adoc[].
+See xref:installation-and-upgrade:proxy-x.adoc[].
 
 Minor Version Upgrade (Y Upgrade)::
 Upgrading to the next minor version.
 This is often referred to as a service pack (SP) migration.
 For example, upgrading from 4.1 to 4.2 or from 4.0 to 4.2.
-See xref:upgrade:proxy-y-z.adoc[].
+See xref:installation-and-upgrade:proxy-y-z.adoc[].
 
 Patch Level Upgrade (Z Upgrade)::
 Upgrading within the same minor version.
 This is often referred to as a maintenance update.
 For example, upgrading from 4.2.0 to 4.2.1.
-See xref:upgrade:proxy-y-z.adoc[].
+See xref:installation-and-upgrade:proxy-y-z.adoc[].
 endif::[]
 
 
