--- a/modules/installation-and-upgrade/pages/proxy-setup.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-setup.adoc
@@ -231,7 +231,7 @@ If you do not use the reactivation key, you will need to re-register all the cli
 . In the {webui}, create a reactivation key for the old proxy system.
   On the [guimenu]``System Details`` tab of the old proxy click [guimenu]``Reactivation``.
   Click [guimenu]``Generate New Key``, and make a note of the new key.
-. Register the new proxy with a bootstrap script as described in xref:installation:proxy-registration.adoc[].
+. Register the new proxy with a bootstrap script as described in xref:installation-and-upgrade:proxy-registration.adoc[].
   In the bootstrap script, set the reactivation key with the [systemitem]``REACTIVATION_KEY`` parameter.
 . Restore the proxy data from the backup you made earlier.
   See step 1 of this procedure.
@@ -250,7 +250,7 @@ For Salt proxies, you need to do some additional steps before you bootstrap the 
 . In the {webui}, navigate to menu:Salt[Keys], locate the Salt key associated with the old proxy, and click btn:[delete].
 . Install a new {productname} Proxy.
   For installation instructions, see xref:install-proxy-unified.adoc[Proxy Installation].
-. Register the new proxy with a bootstrap script as described in xref:installation:proxy-registration.adoc[].
+. Register the new proxy with a bootstrap script as described in xref:installation-and-upgrade:proxy-registration.adoc[].
   In the bootstrap script, set the reactivation key with the [systemitem]``REACTIVATION_KEY`` parameter.
 . Restore the proxy data from the backup you made earlier.
   See step 1 of this procedure.
@@ -279,7 +279,7 @@ This means you do not have to re-register the clients.
 . Shut down the proxy.
 . Install a new {productname} Proxy, and ensure it has the same IP address as the proxy you are replacing.
   For installation instructions, see xref:install-proxy-unified.adoc[Proxy Installation].
-. Register the proxy with a bootstrap script as described in xref:installation:proxy-registration.adoc[].
+. Register the proxy with a bootstrap script as described in xref:installation-and-upgrade:proxy-registration.adoc[].
   In the bootstrap script set the activation key used with the old proxy with the [systemitem]``ACTIVATION_KEYS`` parameter.
 
 After the installation of the new proxy, you might also need to:
