--- a/modules/installation-and-upgrade/pages/pubcloud-setup.adoc
+++ b/modules/installation-and-upgrade/pages/pubcloud-setup.adoc
@@ -6,7 +6,7 @@
 [IMPORTANT]
 ====
 You must have set up the storage devices before you run the YaST {productname} setup procedure.
-For more information, see xref:installation:pubcloud-requirements.adoc[].
+For more information, see xref:installation-and-upgrade:pubcloud-requirements.adoc[].
 ====
 
 Follow the cloud providers instructions to SSH into the instance, and run this command to start set up:
@@ -17,7 +17,7 @@ yast2 susemanager_setup
 
 Follow the prompts, and wait for the setup to finish.
 
-For detailed instructions on setting up {productname} with {yast}, see xref:installation:server-setup.adoc[].
+For detailed instructions on setting up {productname} with {yast}, see xref:installation-and-upgrade:server-setup.adoc[].
 
 
 
@@ -106,13 +106,13 @@ Change this by navigating to menu:Admin[Organizations], and editing the organiza
 When you have signed in to the administrator account for the first time, change the default password to protect your account.
 ====
 
-For more information about setting up your {productname} Server, see xref:installation:server-setup.adoc[].
+For more information about setting up your {productname} Server, see xref:installation-and-upgrade:server-setup.adoc[].
 
 
 Use the {productname} {webui} to add the required software products, and schedule a repository synchronization.
 The best way to do this is to navigate to menu:Admin[Setup Wizard] and follow the prompts.
 
-For more information about the setup wizard, see xref:installation:setup-wizard.adoc[].
+For more information about the setup wizard, see xref:installation-and-upgrade:setup-wizard.adoc[].
 
 
 If you are intending to register {ubuntu} or {rhel} clients, you need to set up custom repositories and channels.
