--- a/modules/installation-and-upgrade/pages/server-intro-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-intro-uyuni.adoc
@@ -6,9 +6,9 @@ Check the release notes for information about which upgrade strategy to use to u
 
 Minor Upgrades::
 You can consider minor upgrades as regular upgrades.
-For more information, see xref:upgrade:server-minor-upgrade-uyuni.adoc[].
+For more information, see xref:installation-and-upgrade:server-minor-upgrade-uyuni.adoc[].
 
 Major Upgrades::
 You can consider major upgrades as special upgrades.
 In this case components such as the base operating system, Salt, or the PostgreSQL database will be upgraded.
-For more information, see xref:upgrade:server-major-upgrade-uyuni.adoc[].
+For more information, see xref:installation-and-upgrade:server-major-upgrade-uyuni.adoc[].
