--- a/modules/installation-and-upgrade/pages/server-intro.adoc
+++ b/modules/installation-and-upgrade/pages/server-intro.adoc
@@ -9,18 +9,18 @@ Major Version Upgrade (X Upgrade)::
 Upgrading to the next major version.
 For example, upgrading from 3.2 to 4.0 or to 4.1.
 
-See xref:upgrade:server-x.adoc[].
+See xref:installation-and-upgrade:server-x.adoc[].
 
 Minor Version Upgrade (Y Upgrade)::
 Upgrading to the next minor version.
 This is often referred to as a service pack (SP) migration.
 For example, upgrading from 4.1 to 4.2 or from 4.0 to 4.2.
 
-See xref:upgrade:server-y.adoc[].
+See xref:installation-and-upgrade:server-y.adoc[].
 
 Patch Level Upgrade (Z Upgrade)::
 Upgrading within the same minor version.
 This is often referred to as a maintenance update.
 For example, upgrading from 4.2.0 to 4.2.1.
 
-See xref:upgrade:server-z.adoc[].
+See xref:installation-and-upgrade:server-z.adoc[].
