--- a/modules/installation-and-upgrade/pages/uyuni-proxy-setup.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-proxy-setup.adoc
@@ -9,7 +9,7 @@
 == Install the [path]``uyuni_proxy`` pattern
 
 Check that the Proxy pattern is installed correctly.
-This step is part of xref:installation:install-proxy-uyuni.adoc[].
+This step is part of xref:installation-and-upgrade:install-proxy-uyuni.adoc[].
 To verify a successful installation, on the server select the [package]``pattern_uyuni_proxy`` package for installation.
 
 The salt-broker service will be automatically started after installation is complete.
