--- a/modules/quickstart/pages/quickstart-install-uyuni-proxy.adoc
+++ b/modules/quickstart/pages/quickstart-install-uyuni-proxy.adoc
@@ -284,7 +284,7 @@ A proxy does not contain any information about the clients that are connected to
 Therefore, a proxy can be replaced by a new one at any time.
 The replacement proxy must have the same name and IP address as its predecessor.
 
-For more information about reinstalling a proxy, see xref:installation:proxy-setup.adoc[].
+For more information about reinstalling a proxy, see xref:installation-and-upgrade:proxy-setup.adoc[].
 
 Proxy systems are registered as Salt clients using a bootstrap script.
 
