--- a/modules/quickstart/pages/quickstart-install-uyuni-server.adoc
+++ b/modules/quickstart/pages/quickstart-install-uyuni-server.adoc
@@ -62,7 +62,7 @@ zypper in patterns-uyuni_server
 . Reboot the server.
 
 When the installation is complete, you can continue with {productname} setup.
-For more information, see xref:installation:uyuni-server-setup.adoc[].
+For more information, see xref:installation-and-upgrade:uyuni-server-setup.adoc[].
 
 
 
