--- a/modules/reference/pages/home/home-my-preferences.adoc
+++ b/modules/reference/pages/home/home-my-preferences.adoc
@@ -20,5 +20,5 @@ The menu:Home[My Preferences] section allows you to configure {productname} {web
 |===
 
 
-For information about setting up and using the {productname} {webui}, see xref:installation:webui-setup.adoc[].
+For information about setting up and using the {productname} {webui}, see xref:installation-and-upgrade:webui-setup.adoc[].
 For information about changing the default preferences, see xref:administration:users.adoc[].
