--- a/modules/reference/pages/home/home-overview.adoc
+++ b/modules/reference/pages/home/home-overview.adoc
@@ -3,4 +3,4 @@
 
 The menu:Home[Overview] section is a dashboard that contains a summary of your current {productname} status, including tasks, client information, and critical security updates.
 
-For more information about setting up and using the {productname} {webui}, see xref:installation:webui-setup.adoc[].
+For more information about setting up and using the {productname} {webui}, see xref:installation-and-upgrade:webui-setup.adoc[].
