--- a/modules/retail/pages/retail-install-unified.adoc
+++ b/modules/retail/pages/retail-install-unified.adoc
@@ -63,7 +63,7 @@ yast2 susemanager_setup
 . Follow the prompts to set up your account.
   Take note of the passwords you set, you will need them later on.
 
-Continue with general {productname} configuration and channel synchronization at xref:installation:server-setup.adoc[].
+Continue with general {productname} configuration and channel synchronization at xref:installation-and-upgrade:server-setup.adoc[].
 
 
 == Install {productname} {smr} Branch Server
@@ -112,9 +112,9 @@ For Branch Server, the expected modules are:
 * SLE-Module-Server-Applications15-SP2-Pool for x86_64 SMRBS 4.1
 * SLE-Module-Server-Applications15-SP2-Updates for x86_64 SMRBS 4.1
 * SLE-Product-SUSE-Manager-Retail-Branch-Server-4.1-Updates for x86_64
-. Use this activation key in {productname} Proxy registration at xref:installation:proxy-registration.adoc[].
+. Use this activation key in {productname} Proxy registration at xref:installation-and-upgrade:proxy-registration.adoc[].
 . Configure {productname} Proxy.
-  For more information on how to do this, see xref:installation:proxy-setup.adoc[].
+  For more information on how to do this, see xref:installation-and-upgrade:proxy-setup.adoc[].
 
 
 [WARNING]
