--- a/modules/retail/pages/retail-network-arch.adoc
+++ b/modules/retail/pages/retail-network-arch.adoc
@@ -19,12 +19,12 @@ The branch servers can also manage local networking, and provide DHCP and DNS se
 
 ifeval::[{suma-content} == true]
 {productname} {smr} Branch Servers are implemented as enhanced {productname} Proxies.
-For technical background information on {productname} Proxies, see xref:installation:install-proxy-unified.adoc[].
+For technical background information on {productname} Proxies, see xref:installation-and-upgrade:install-proxy-unified.adoc[].
 endif::[]
 
 ifeval::[{uyuni-content} == true]
 {productname} {smr} Branch Servers are implemented as enhanced {productname} Proxies.
-For technical background information on {productname} Proxies, see xref:installation:install-proxy-uyuni.adoc[].
+For technical background information on {productname} Proxies, see xref:installation-and-upgrade:install-proxy-uyuni.adoc[].
 endif::[]
 
 
