--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -9,17 +9,17 @@ This process is called an SSL handshake.
 During the SSL handshake, the client checks that the hostname in the server certificate matches what it expects.
 The client also needs to check if the server certificate is trusted.
 
-Every {productname} Server that uses SSL requires an SSL server certificate.
-Provide the path to the server certificate using the ``SERVER_CERT`` environment variable during setup, or with the ``--from-server-cert`` option of the [command]``rhn-ssl-tool`` command.
+//Every {productname} Server that uses SSL requires an SSL server certificate.
+//Provide the path to the server certificate using the ``SERVER_CERT`` environment variable during setup, or with the ``--from-server-cert`` option of the [command]``rhn-ssl-tool`` command.
 
 Certificate authorities (CAs) are certificates that are used to sign other certificates.
 All certificates must be signed by a certificate authority (CA) in order for them to be considered valid, and for clients to be able to successfully match against them.
 
-When an organization signs its own certificate, the certificate is considered self-signed.
-A self-signed certificate is straight-forward to set up, and does not cost any money, but they are considered less secure.
-If you are using a self-signed certificate, you have a root CA that is signed with itself.
-When you look at the details of a root CA, you can see that the subject has the same value as the issuer.
-Provide the path to your root CA certificate using the ``CA_CERT`` environment variable during setup, or with the ``--ca-cert`` option of the [command]``rhn-ssl-tool`` command.
+//When an organization signs its own certificate, the certificate is considered self-signed.
+//A self-signed certificate is straight-forward to set up, and does not cost any money, but they are considered less secure.
+//If you are using a self-signed certificate, you have a root CA that is signed with itself.
+//When you look at the details of a root CA, you can see that the subject has the same value as the issuer.
+//Provide the path to your root CA certificate using the ``CA_CERT`` environment variable during setup, or with the ``--ca-cert`` option of the [command]``rhn-ssl-tool`` command.
 
 In order for SSL authentication to work correctly, the client must trust the root CA.
 This means that the root CA must be installed on every client.
@@ -36,20 +36,28 @@ If you are using intermediate CAs in a chained certificate, the root CA is insta
 During the SSL handshake, clients must be able to verify the entire chain of intermediate certificates between the root CA and the server certificate, so they must be able to access all the intermediate certificates.
 
 There are two main ways of achieving this.
-In {productname}, by default, all the intermediate CAs are installed on the client.
+In older versions of {productname}, by default, all the intermediate CAs are installed on the client.
 However, you could also configure your services on the server to provide them to the client.
 In this case, during the SSL handshake, the server presents the server certificate as well as all the intermediate CAs.
+This mechanims is used now as the new default configuration.
 
-Whichever method you choose, you must ensure that the ``CA_CERT`` environment variable points to the root CA, and all intermediate CAs.
-It should not contain the server certificate.
-The server certificate must be defined at the ``SERVER_CERT`` environment variable.
+//Whichever method you choose, you must ensure that the ``CA_CERT`` environment variable points to the root CA, and all intermediate CAs.
+//It should not contain the server certificate.
+//The server certificate must be defined at the ``SERVER_CERT`` environment variable.
 
-By default, {productname} uses a self-signed certificate.
+By default, {productname} uses a self-signed certificate without intermediate CAs.
 For additional security, you can arrange a third party CA to sign your certificates.
 Third party CAs perform checks to ensure that the information contained in the certificate is correct.
 They usually charge an annual fee for this service.
 Using a third party CA makes certificates harder to spoof, and provides additional protection for your installation.
 If you have certificates signed by a third party CA, you can import them to your {productname} installation.
 
-* For more on self-signed certificates, see xref:administration:ssl-certs-selfsigned.adoc[].
-* For more on imported certificates, see xref:administration:ssl-certs-imported.adoc[].
+This manual describe the use of SSL certificates in 2 steps
+
+1. How to create a self-signed certificate with {productname} tools
+2. How to deploy a certificate on {productname} Server or Proxy
+
+In case the Certificates are provided by a 3rd Party instance like an own or external PKI, step 1 can be skipped.
+
+* For more on how to create self-signed certificates, see xref:administration:ssl-certs-selfsigned.adoc[].
+* For more on how to imported certificates, see xref:administration:ssl-certs-imported.adoc[].
