register older sle clients https://github.com/SUSE/spacewalk/issues/16464

--- a/modules/client-configuration/pages/clients-sle.adoc
+++ b/modules/client-configuration/pages/clients-sle.adoc
@@ -78,6 +78,18 @@ The channels you need for this procedure are:
 
 |===
 
+[NOTE]
+====
+To find channel names of older products, at the command prompt on the {productname} Server, as root, use the [command]``mgr-sync`` command:
+
+----
+mgr-sync list --help
+----
+
+Then specify the argument you are interested in.
+For example, [literal]``-c channels``.
+====
+
 
 include::snippets/addchannels_vendor_cli.adoc[]
 
