Fixed broken link.

--- a/modules/installation-and-upgrade/pages/network-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/network-requirements.adoc
@@ -34,4 +34,4 @@ In a production environment, the {productname} Server and clients should always 
 For a comprehensive list of the required ports, see xref:installation-and-upgrade:ports.adoc[].
 
 
-For more information on disconnected setup and port configuration, see xref:administration:disconnected-setup.adoc#client-cfg-reg-with-bootstrap-disconnected[].
+For more information on disconnected setup and port configuration, see xref:administration:disconnected-setup.adoc[].
