--- a/modules/retail/pages/retail-migration-intro.adoc
+++ b/modules/retail/pages/retail-migration-intro.adoc
@@ -2,7 +2,7 @@
 = Retail Migration
 
 ifeval::[{suma-content} == true]
-This section provides instructions for migrating {slepos} 11, {productname} {smr} 3.1, or {productname} {smr} 3.2 to {productname} {smr} 4.1.
+This section provides instructions for migrating {slepos} 11, {productname} {smr} 3.1, or {productname} {smr} 3.2 to the newest version of {productname} {smr}.
 endif::[]
 
 ifeval::[{uyuni-content} == true]
