--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -9,7 +9,7 @@ This section covers how to configure SSL certificate for new {productname} insta
 Before you begin, ensure you have:
 
 * A certificate authority (CA) SSL public certificate.
-  If you are using a CA chain, all intermediate CAs must be available as well.
+  If you are using a CA chain, all intermediate CAs must also be available.
 * An SSL server private key
 * An SSL server certificate
 
