--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -21,8 +21,7 @@ You can also list multiple host names if your environment requires it.
 
 Third-party authorities commonly use intermediate CAs to sign requested server certificates. 
 In this case, all CAs in the chain are required to be available.
-If there is not extra parameter or option available to specify intermediate CAs, take care that all CAs - Root CA and intermediate CAs -
-are available in one file.
+If there is no extra parameter or option available to specify intermediate CAs, take care that all CAs (Root CA and intermediate CAs) are stored in one file.
 
 == Import Certificates for New Installations
 
