--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -101,10 +101,9 @@ mgr-ssl-cert-setup --root-ca-file=<Path_to_Root_CA_Certificate> --server-cert-fi
 ----
 
 
-Intermediate CAs can either be available in the file which is specified as 'root-ca-file' or specified by extra options `--intermediate-ca-file`.
-This option can be used multiple times.
-
-This command performs a number of tests on the provides files to test if they are valid and can be used for the requested use case.
+Intermediate CAs can either be available in the file which is specified with `--root-ca-file` or specified as extra options with `--intermediate-ca-file`.
+The `--intermediate-ca-file` option can be specified multiple times.
+This command performs a number of tests on the provided files to test if they are valid and can be used for the requested use case.
 
 . Restart services to pick up the changes:
 +
