--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -134,8 +134,7 @@ If the Root CA was changed, it needs to get deployed to all the clients connecte
 
 Traditional Clients are deprecated and should be replaced with Salt Client.
 
-If the CA needs to be replaced when there are still traditional managed clients connected to {productname}
-some extra steps are required.
+If the CA needs to be replaced when there are still traditional managed clients connected to {productname} some extra steps are required.
 
 Important is, that the clients do not get disconnected when the new CA is activated on the {productname} Server and Proxies.
 Deploy the 'old' and the 'new' Root CA certificates to the affected clients and trust them.
